@@ -146,6 +146,7 @@ Advanced Search
 Search Results
 </h3>
 
+<tmpl_unless read_only>
 <div class="panel"><form<tmpl_unless row_count> class="clearfix"</tmpl_unless>>
   <input value="Add Template" onclick="add_template()" type="button" class="west">
   <tmpl_if row_count>
@@ -153,11 +154,13 @@ Search Results
     <input value="Delete" onclick="delete_selected()" type="button">
   </tmpl_if>
 </form></div>
+</tmpl_unless>
 
 <!--Krang::HTMLPager:-->
 <tmpl_var pager_html>
 <!--:Krang::HTMLPager-->
 
+<tmpl_unless read_only>
 <div class="panel capped"><form<tmpl_unless row_count> class="clearfix"</tmpl_unless>>
   <input value="Add Template" onclick="add_template()" type="button" class="west">
   <tmpl_if row_count>
@@ -165,6 +168,7 @@ Search Results
     <input value="Delete" onclick="delete_selected()" type="button">
   </tmpl_if>
 </form></div>
+</tmpl_unless>
 
 <tmpl_if do_advanced_search>
   <form name="clear_advanced_search_form" method="post" action="template.pl">
